--- a/index.ipynb
+++ b/index.ipynb
@@ -958,11 +958,427 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>...</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.921824</td>\n",
+       "      <td>0.921824</td>\n",
+       "      <td>0.844091</td>\n",
+       "      <td>0.766977</td>\n",
+       "      <td>0.690725</td>\n",
+       "      <td>0.615666</td>\n",
+       "      <td>0.542248</td>\n",
+       "      <td>0.471051</td>\n",
+       "      <td>0.402792</td>\n",
+       "      <td>0.338294</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.780181</td>\n",
+       "      <td>0.780192</td>\n",
+       "      <td>0.780203</td>\n",
+       "      <td>0.780213</td>\n",
+       "      <td>0.780224</td>\n",
+       "      <td>0.780235</td>\n",
+       "      <td>0.780246</td>\n",
+       "      <td>0.780256</td>\n",
+       "      <td>0.780267</td>\n",
+       "      <td>0.780278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.886965</td>\n",
+       "      <td>0.886965</td>\n",
+       "      <td>0.774398</td>\n",
+       "      <td>0.662523</td>\n",
+       "      <td>0.551665</td>\n",
+       "      <td>0.442287</td>\n",
+       "      <td>0.335031</td>\n",
+       "      <td>0.230757</td>\n",
+       "      <td>0.130552</td>\n",
+       "      <td>0.035687</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.601634</td>\n",
+       "      <td>-1.601638</td>\n",
+       "      <td>-1.601641</td>\n",
+       "      <td>-1.601645</td>\n",
+       "      <td>-1.601648</td>\n",
+       "      <td>-1.601651</td>\n",
+       "      <td>-1.601655</td>\n",
+       "      <td>-1.601658</td>\n",
+       "      <td>-1.601662</td>\n",
+       "      <td>-1.601665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.978665</td>\n",
+       "      <td>0.978665</td>\n",
+       "      <td>0.957571</td>\n",
+       "      <td>0.936807</td>\n",
+       "      <td>0.916498</td>\n",
+       "      <td>0.896810</td>\n",
+       "      <td>0.877964</td>\n",
+       "      <td>0.860242</td>\n",
+       "      <td>0.843990</td>\n",
+       "      <td>0.829602</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.617718</td>\n",
+       "      <td>2.617718</td>\n",
+       "      <td>2.617718</td>\n",
+       "      <td>2.617719</td>\n",
+       "      <td>2.617719</td>\n",
+       "      <td>2.617719</td>\n",
+       "      <td>2.617719</td>\n",
+       "      <td>2.617720</td>\n",
+       "      <td>2.617720</td>\n",
+       "      <td>2.617720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.948142</td>\n",
+       "      <td>0.948142</td>\n",
+       "      <td>0.896567</td>\n",
+       "      <td>0.845390</td>\n",
+       "      <td>0.794768</td>\n",
+       "      <td>0.744918</td>\n",
+       "      <td>0.696134</td>\n",
+       "      <td>0.648794</td>\n",
+       "      <td>0.603371</td>\n",
+       "      <td>0.560406</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.951894</td>\n",
+       "      <td>-1.951900</td>\n",
+       "      <td>-1.951906</td>\n",
+       "      <td>-1.951912</td>\n",
+       "      <td>-1.951919</td>\n",
+       "      <td>-1.951925</td>\n",
+       "      <td>-1.951931</td>\n",
+       "      <td>-1.951937</td>\n",
+       "      <td>-1.951943</td>\n",
+       "      <td>-1.951949</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.961222</td>\n",
+       "      <td>0.961222</td>\n",
+       "      <td>0.922681</td>\n",
+       "      <td>0.884469</td>\n",
+       "      <td>0.846715</td>\n",
+       "      <td>0.809593</td>\n",
+       "      <td>0.773338</td>\n",
+       "      <td>0.738251</td>\n",
+       "      <td>0.704703</td>\n",
+       "      <td>0.673119</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.393193</td>\n",
+       "      <td>-1.393228</td>\n",
+       "      <td>-1.393264</td>\n",
+       "      <td>-1.393299</td>\n",
+       "      <td>-1.393334</td>\n",
+       "      <td>-1.393369</td>\n",
+       "      <td>-1.393404</td>\n",
+       "      <td>-1.393440</td>\n",
+       "      <td>-1.393475</td>\n",
+       "      <td>-1.393510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.978095</td>\n",
+       "      <td>0.978095</td>\n",
+       "      <td>0.956234</td>\n",
+       "      <td>0.934437</td>\n",
+       "      <td>0.912736</td>\n",
+       "      <td>0.891173</td>\n",
+       "      <td>0.869810</td>\n",
+       "      <td>0.848732</td>\n",
+       "      <td>0.828054</td>\n",
+       "      <td>0.807918</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.058193</td>\n",
+       "      <td>0.058192</td>\n",
+       "      <td>0.058192</td>\n",
+       "      <td>0.058191</td>\n",
+       "      <td>0.058190</td>\n",
+       "      <td>0.058190</td>\n",
+       "      <td>0.058189</td>\n",
+       "      <td>0.058189</td>\n",
+       "      <td>0.058188</td>\n",
+       "      <td>0.058188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.969541</td>\n",
+       "      <td>0.969541</td>\n",
+       "      <td>0.939287</td>\n",
+       "      <td>0.909318</td>\n",
+       "      <td>0.879747</td>\n",
+       "      <td>0.850725</td>\n",
+       "      <td>0.822455</td>\n",
+       "      <td>0.795203</td>\n",
+       "      <td>0.769294</td>\n",
+       "      <td>0.745104</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.159859</td>\n",
+       "      <td>1.159857</td>\n",
+       "      <td>1.159855</td>\n",
+       "      <td>1.159853</td>\n",
+       "      <td>1.159851</td>\n",
+       "      <td>1.159849</td>\n",
+       "      <td>1.159847</td>\n",
+       "      <td>1.159845</td>\n",
+       "      <td>1.159842</td>\n",
+       "      <td>1.159840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.929711</td>\n",
+       "      <td>0.929711</td>\n",
+       "      <td>0.859963</td>\n",
+       "      <td>0.790966</td>\n",
+       "      <td>0.723009</td>\n",
+       "      <td>0.656483</td>\n",
+       "      <td>0.591911</td>\n",
+       "      <td>0.529961</td>\n",
+       "      <td>0.471451</td>\n",
+       "      <td>0.417301</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.369094</td>\n",
+       "      <td>4.369111</td>\n",
+       "      <td>4.369129</td>\n",
+       "      <td>4.369146</td>\n",
+       "      <td>4.369164</td>\n",
+       "      <td>4.369181</td>\n",
+       "      <td>4.369199</td>\n",
+       "      <td>4.369216</td>\n",
+       "      <td>4.369233</td>\n",
+       "      <td>4.369251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.924392</td>\n",
+       "      <td>0.924392</td>\n",
+       "      <td>0.848973</td>\n",
+       "      <td>0.773836</td>\n",
+       "      <td>0.699118</td>\n",
+       "      <td>0.625019</td>\n",
+       "      <td>0.551823</td>\n",
+       "      <td>0.479923</td>\n",
+       "      <td>0.409834</td>\n",
+       "      <td>0.342183</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.831364</td>\n",
+       "      <td>-0.831364</td>\n",
+       "      <td>-0.831363</td>\n",
+       "      <td>-0.831363</td>\n",
+       "      <td>-0.831362</td>\n",
+       "      <td>-0.831362</td>\n",
+       "      <td>-0.831362</td>\n",
+       "      <td>-0.831361</td>\n",
+       "      <td>-0.831361</td>\n",
+       "      <td>-0.831360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.965014</td>\n",
+       "      <td>0.965014</td>\n",
+       "      <td>0.930148</td>\n",
+       "      <td>0.895453</td>\n",
+       "      <td>0.861000</td>\n",
+       "      <td>0.826886</td>\n",
+       "      <td>0.793248</td>\n",
+       "      <td>0.760263</td>\n",
+       "      <td>0.728157</td>\n",
+       "      <td>0.697195</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-2.750801</td>\n",
+       "      <td>-2.750802</td>\n",
+       "      <td>-2.750803</td>\n",
+       "      <td>-2.750804</td>\n",
+       "      <td>-2.750805</td>\n",
+       "      <td>-2.750805</td>\n",
+       "      <td>-2.750806</td>\n",
+       "      <td>-2.750807</td>\n",
+       "      <td>-2.750808</td>\n",
+       "      <td>-2.750809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.921124</td>\n",
+       "      <td>0.921124</td>\n",
+       "      <td>0.842862</td>\n",
+       "      <td>0.765457</td>\n",
+       "      <td>0.689245</td>\n",
+       "      <td>0.614685</td>\n",
+       "      <td>0.542391</td>\n",
+       "      <td>0.473156</td>\n",
+       "      <td>0.407954</td>\n",
+       "      <td>0.347889</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.457803</td>\n",
+       "      <td>1.457801</td>\n",
+       "      <td>1.457800</td>\n",
+       "      <td>1.457798</td>\n",
+       "      <td>1.457797</td>\n",
+       "      <td>1.457795</td>\n",
+       "      <td>1.457794</td>\n",
+       "      <td>1.457792</td>\n",
+       "      <td>1.457791</td>\n",
+       "      <td>1.457789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.959973</td>\n",
+       "      <td>0.959973</td>\n",
+       "      <td>0.920046</td>\n",
+       "      <td>0.880263</td>\n",
+       "      <td>0.840691</td>\n",
+       "      <td>0.801422</td>\n",
+       "      <td>0.762590</td>\n",
+       "      <td>0.724372</td>\n",
+       "      <td>0.687002</td>\n",
+       "      <td>0.650760</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-3.107943</td>\n",
+       "      <td>-3.107945</td>\n",
+       "      <td>-3.107947</td>\n",
+       "      <td>-3.107949</td>\n",
+       "      <td>-3.107952</td>\n",
+       "      <td>-3.107954</td>\n",
+       "      <td>-3.107956</td>\n",
+       "      <td>-3.107958</td>\n",
+       "      <td>-3.107960</td>\n",
+       "      <td>-3.107963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.884694</td>\n",
+       "      <td>0.884694</td>\n",
+       "      <td>0.770039</td>\n",
+       "      <td>0.656297</td>\n",
+       "      <td>0.543836</td>\n",
+       "      <td>0.433160</td>\n",
+       "      <td>0.324949</td>\n",
+       "      <td>0.220093</td>\n",
+       "      <td>0.119691</td>\n",
+       "      <td>0.025007</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-2.191576</td>\n",
+       "      <td>-2.191577</td>\n",
+       "      <td>-2.191577</td>\n",
+       "      <td>-2.191578</td>\n",
+       "      <td>-2.191578</td>\n",
+       "      <td>-2.191579</td>\n",
+       "      <td>-2.191579</td>\n",
+       "      <td>-2.191580</td>\n",
+       "      <td>-2.191580</td>\n",
+       "      <td>-2.191581</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>13 rows × 10001 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           0         0         0         0         0         0         0  \\\n",
+       "0   0.921824  0.921824  0.844091  0.766977  0.690725  0.615666  0.542248   \n",
+       "1   0.886965  0.886965  0.774398  0.662523  0.551665  0.442287  0.335031   \n",
+       "2   0.978665  0.978665  0.957571  0.936807  0.916498  0.896810  0.877964   \n",
+       "3   0.948142  0.948142  0.896567  0.845390  0.794768  0.744918  0.696134   \n",
+       "4   0.961222  0.961222  0.922681  0.884469  0.846715  0.809593  0.773338   \n",
+       "5   0.978095  0.978095  0.956234  0.934437  0.912736  0.891173  0.869810   \n",
+       "6   0.969541  0.969541  0.939287  0.909318  0.879747  0.850725  0.822455   \n",
+       "7   0.929711  0.929711  0.859963  0.790966  0.723009  0.656483  0.591911   \n",
+       "8   0.924392  0.924392  0.848973  0.773836  0.699118  0.625019  0.551823   \n",
+       "9   0.965014  0.965014  0.930148  0.895453  0.861000  0.826886  0.793248   \n",
+       "10  0.921124  0.921124  0.842862  0.765457  0.689245  0.614685  0.542391   \n",
+       "11  0.959973  0.959973  0.920046  0.880263  0.840691  0.801422  0.762590   \n",
+       "12  0.884694  0.884694  0.770039  0.656297  0.543836  0.433160  0.324949   \n",
+       "\n",
+       "           0         0         0    ...            0         0         0  \\\n",
+       "0   0.471051  0.402792  0.338294    ...     0.780181  0.780192  0.780203   \n",
+       "1   0.230757  0.130552  0.035687    ...    -1.601634 -1.601638 -1.601641   \n",
+       "2   0.860242  0.843990  0.829602    ...     2.617718  2.617718  2.617718   \n",
+       "3   0.648794  0.603371  0.560406    ...    -1.951894 -1.951900 -1.951906   \n",
+       "4   0.738251  0.704703  0.673119    ...    -1.393193 -1.393228 -1.393264   \n",
+       "5   0.848732  0.828054  0.807918    ...     0.058193  0.058192  0.058192   \n",
+       "6   0.795203  0.769294  0.745104    ...     1.159859  1.159857  1.159855   \n",
+       "7   0.529961  0.471451  0.417301    ...     4.369094  4.369111  4.369129   \n",
+       "8   0.479923  0.409834  0.342183    ...    -0.831364 -0.831364 -0.831363   \n",
+       "9   0.760263  0.728157  0.697195    ...    -2.750801 -2.750802 -2.750803   \n",
+       "10  0.473156  0.407954  0.347889    ...     1.457803  1.457801  1.457800   \n",
+       "11  0.724372  0.687002  0.650760    ...    -3.107943 -3.107945 -3.107947   \n",
+       "12  0.220093  0.119691  0.025007    ...    -2.191576 -2.191577 -2.191577   \n",
+       "\n",
+       "           0         0         0         0         0         0         0  \n",
+       "0   0.780213  0.780224  0.780235  0.780246  0.780256  0.780267  0.780278  \n",
+       "1  -1.601645 -1.601648 -1.601651 -1.601655 -1.601658 -1.601662 -1.601665  \n",
+       "2   2.617719  2.617719  2.617719  2.617719  2.617720  2.617720  2.617720  \n",
+       "3  -1.951912 -1.951919 -1.951925 -1.951931 -1.951937 -1.951943 -1.951949  \n",
+       "4  -1.393299 -1.393334 -1.393369 -1.393404 -1.393440 -1.393475 -1.393510  \n",
+       "5   0.058191  0.058190  0.058190  0.058189  0.058189  0.058188  0.058188  \n",
+       "6   1.159853  1.159851  1.159849  1.159847  1.159845  1.159842  1.159840  \n",
+       "7   4.369146  4.369164  4.369181  4.369199  4.369216  4.369233  4.369251  \n",
+       "8  -0.831363 -0.831362 -0.831362 -0.831362 -0.831361 -0.831361 -0.831360  \n",
+       "9  -2.750804 -2.750805 -2.750805 -2.750806 -2.750807 -2.750808 -2.750809  \n",
+       "10  1.457798  1.457797  1.457795  1.457794  1.457792  1.457791  1.457789  \n",
+       "11 -3.107949 -3.107952 -3.107954 -3.107956 -3.107958 -3.107960 -3.107963  \n",
+       "12 -2.191578 -2.191578 -2.191579 -2.191579 -2.191580 -2.191580 -2.191581  \n",
+       "\n",
+       "[13 rows x 10001 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "weigth_col"
+    "weight_col"
    ]
   },
   {
