--- a/index.ipynb
+++ b/index.ipynb
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1514,7 @@
        "        1.45580368, -3.115599  , -2.19130405])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1526,18 +1526,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ 0.7802778 , -1.601665  ,  2.61772008, -1.95194946, -1.39350985,\n",
-       "         0.05818755,  1.15984037,  4.36925075, -0.83136019, -2.75080939,\n",
-       "         1.45778904, -3.10796257, -2.19158082]),)"
+       "array([ 0.7802778 , -1.601665  ,  2.61772008, -1.95194946, -1.39350985,\n",
+       "        0.05818755,  1.15984037,  4.36925075, -0.83136019, -2.75080939,\n",
+       "        1.45778904, -3.10796257, -2.19158082])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
